--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 16 16:43:01 CLST 2025
-sdk.dir=C\:\\Users\\POAPCA02LC0200\\AppData\\Local\\Android\\Sdk
+#Fri Oct 17 11:03:51 CLST 2025
+sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
