--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 17 11:03:51 CLST 2025
-sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
+#Fri Oct 17 13:31:04 CLST 2025
+sdk.dir=C\:\\Users\\POAPCA02LC1300\\AppData\\Local\\Android\\Sdk
