--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 21 15:40:10 CLST 2025
-sdk.dir=C\:\\Users\\POAPCA02LC0200\\AppData\\Local\\Android\\Sdk
+#Wed Oct 22 15:34:18 CLST 2025
+sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
