--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 22 15:34:18 CLST 2025
-sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
+#Fri Oct 24 15:33:32 CLST 2025
+sdk.dir=C\:\\Users\\POAPCA01LC0400\\AppData\\Local\\Android\\Sdk
