--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Oct 24 15:33:32 CLST 2025
-sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\POAPCA02LC0200\\AppData\\Local\\Android\\Sdk
