save credentials + posting fix

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 13 20:45:52 CLST 2025
-sdk.dir=C\:\\Users\\martin\\AppData\\Local\\Android\\Sdk
+#Mon Nov 17 11:08:58 CLST 2025
+sdk.dir=C\:\\Users\\POAPCA02LC1300\\AppData\\Local\\Android\\Sdk
