--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Nov 17 11:08:58 CLST 2025
-sdk.dir=C\:\\Users\\POAPCA02LC1300\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Martin\\AppData\\Local\\Android\\Sdk
